added 'about me' section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
       <img src="./assets/portfolio.png" alt="Innocent Ezama Portfolio Image" />
     </div>
   </section>
+
+  <!-- About Section -->
+  <section id="about" class="about">
+    <div class="about-text">
+      <h2>About Me</h2>
+      <p>
+        I’m Innocent Ezama, a data analyst passionate about turning real-world problems into actionable solutions using
+        data. With a strong foundation in Business Intelligence with Excel and Power BI, I help people and
+        organizations make smarter, data-driven decisions.
+      </p>
+      <p>
+        When I'm not analyzing data, I'm exploring how AI and creative tech can simplify work for underserved
+        entrepreneurs and startups.
+      </p>
+      <p>
+        Some of my other interests include: reading, writing, playing football/chess, and swimming.
+      </p>
+    </div>
+  </section>
+
 </body>
 
 </html>
