added skills section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,49 @@
     </div>
   </section>
 
+  <!-- Skills Section -->
+  <section id="skills" class="skills">
+    <div class="skills-header">
+      <h2>Skills</h2>
+      <p>Tools and technologies I use to solve data problems efficiently:
+      </p>
+    </div>
+
+    <div class="skills-grid">
+      <div class="skill">
+        <h3>Excel & Power BI</h3>
+        <div class="bar">
+          <div class="value" style="width: 95%;"></div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3>Python (Pandas, Matplotlib)</h3>
+        <div class="bar">
+          <div class="value" style="width: 85%;"></div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3>SQL</h3>
+        <div class="bar">
+          <div class="value" style="width: 75%;"></div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3>Data Visualization</h3>
+        <div class="bar">
+          <div class="value" style="width: 90%;"></div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3>Machine Learning</h3>
+        <div class="bar">
+          <div class="value" style="width: 60%;"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 </body>
 
 </html>
