added contact section and footer

--- a/index.html
+++ b/index.html
@@ -100,6 +100,95 @@
     </div>
   </section>
 
+  <!-- Projects Section -->
+  <section id="projects" class="projects">
+    <h2 class="section-title">Projects</h2>
+    <p class="section-subtitle">Some of the things I've built or worked on recently.</p>
+
+    <div class="projects-grid">
+      <!-- Project Card 1 -->
+      <div class="project-card">
+        <div class="card-inner">
+          <div class="card-front">
+            <h3>Startup Scoring Tool</h3>
+          </div>
+          <div class="card-back">
+            <p>Built with Streamlit & Python. Scores startups using public data APIs. Displays visual reports & exports
+              PDF/CSV.</p>
+            <a href="https://github.com/Ezama/startup-scoring-tool" target="_blank">View Project</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project Card 2 -->
+      <div class="project-card">
+        <div class="card-inner">
+          <div class="card-front">
+            <h3>Pizza Sales Data Analysis</h3>
+          </div>
+          <div class="card-back">
+            <p>Power BI project aimed to analyze pizza sales data for a fictional pizzeria over the year 2015.</p>
+            <a href="https://github.com/Ezama/Pizza-Sales-Analysis" target="_blank">View Project</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project Card 3 -->
+      <div class="project-card">
+        <div class="card-inner">
+          <div class="card-front">
+            <h3>E-commerce Customer Segmentation and Sales Performance Analysis</h3>
+          </div>
+          <div class="card-back">
+            <p>Conducted data analysis and transformation on e-commerce sales records using SQL.</p>
+            <a href="https://github.com/Ezama/E-Commerce-Sales-Analysis" target="_blank">View Project</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project Card 4 -->
+      <div class="project-card">
+        <div class="card-inner">
+          <div class="card-front">
+            <h3>NY Citi Bike Data Analysis</h3>
+          </div>
+          <div class="card-back">
+            <p>Analyzed NY Citi Bike rider data to understand how different customer segments utilize Citi Bikes across
+              New York.</p>
+            <a href="https://github.com/Ezama/NY-Citi-Bike-Data-Analysis" target="_blank">View Project</a>
+          </div>
+        </div>
+
+      </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact">
+    <h2 class="section-title">Contact Me</h2>
+    <p class="section-subtitle">Let's build something impactful together.</p>
+
+    <!-- Contact Form -->
+    <form class="contact-form" action="mailto:ezama.tech@gmail.com" method="POST" enctype="text/plain">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn">Send Message</button>
+    </form>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-content">
+      <p>Contact me:
+        <a href="mailto:ezama.tech@gmail.com">Email</a> |
+        <a href="https://www.linkedin.com/in/innocent-ezama/" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/Ezama" target="_blank">Github</a>
+      </p>
+      <p>&copy; 2025 Innocent Ezama. All rights reserved.</p>
+    </div>
+  </footer>
+
+
 
 </body>
 
