removed redundant code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <header>
     <a href="#" class="logo">Innocent Ezama</a>
     <ul class="navmenu">
-      <li><a href="#">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
@@ -35,7 +34,7 @@
       </div>
     </div>
     <div class="home-img">
-      <img src="./assets/portfolio.png" alt="Innocent Ezama Portfolio Image" />
+      <img src="./assets/portfolio.png" alt="Photo of Innocent Ezama, Data Analyst" />
     </div>
   </section>
 
@@ -174,7 +173,6 @@
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
       <button type="submit" class="btn">Send Message</button>
     </form>
-    </div>
   </section>
 
   <footer>
